updating the style

--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 
 .centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 	
+@media only screen and (max-width: 768px) {
+  /* select all elements */
+  * {
+    font-size: 30px; /* set font size to 18px for smartphones */
+  }
+}
