--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 
 .centered {
-    position: absolute;
-    top: 10%;
-    left: 50%;
+    padding-top:3em;
     text-align: center;
 }
 
@@ -20,6 +18,20 @@
 body {
     font-size:16px;
     direction: rtl;
+}
+
+.long_list{
+    height: 50em;
+    overflow-y: auto;
+    padding:20px;
+    margin-bottom:20px;
+    scrolbar-width:none;
+    &::-webkit-scrollbar {
+	display: none;
+    }
+    &::-moz-scrollbar {
+	display: none;
+    }
 }
 
 h1{
